--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
   </properties>
 
   <dependencies>
-
     <!-- Adicione suas dependências aqui, mas não altere as que já estão configuradas -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -37,6 +36,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+        <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
+      <version>2.2</version>
     </dependency>
 
     <dependency>
